Add shuffle data split

--- a/data_split.ipynb
+++ b/data_split.ipynb
@@ -2,13 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "from glob import glob\n",
     "import os\n",
     "import numpy as np\n",
+    "import random\n",
     "\n",
     "data_dir = \"/home/dilith/Projects/SerpSeg/data-serp\"\n",
     "target_dir = \"/home/dilith/Projects/DCAMA/datasets/Serp\"\n",
@@ -18,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,6 +91,67 @@
     "        np.save(os.path.join(fold_train_ann_dir, os.path.basename(path)), mask)\n",
     "    val_paths = mask_paths[l_idx:r_idx]\n",
     "    for path in val_paths:\n",
+    "        mask = np.load(path)\n",
+    "        np.save(os.path.join(fold_val_ann_dir, os.path.basename(path)), mask)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Shuffled"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "expression = []\n",
+    "size = 24\n",
+    "n_folds = 5\n",
+    "fold_size = size // n_folds\n",
+    "indices = list(range(size))\n",
+    "random.shuffle(indices)\n",
+    "\n",
+    "for cur_fold in range(n_folds):\n",
+    "    fold_dir = os.path.join(target_dir, str(cur_fold))\n",
+    "    fold_train_dir = os.path.join(fold_dir, \"train\")\n",
+    "    fold_val_dir = os.path.join(fold_dir, \"val\")\n",
+    "    fold_train_ann_dir = os.path.join(fold_dir, \"annotations\", \"train\")\n",
+    "    fold_val_ann_dir = os.path.join(fold_dir, \"annotations\", \"val\")\n",
+    "    os.makedirs(fold_train_dir, exist_ok=True)\n",
+    "    os.makedirs(fold_val_dir, exist_ok=True)\n",
+    "    os.makedirs(fold_train_ann_dir, exist_ok=True)\n",
+    "    os.makedirs(fold_val_ann_dir, exist_ok=True)\n",
+    "    \n",
+    "    l_idx = fold_size * cur_fold\n",
+    "    r_idx = l_idx + fold_size\n",
+    "\n",
+    "    train_indices = indices[:l_idx] + (indices[r_idx:] if r_idx < size else [])\n",
+    "    for i in train_indices:\n",
+    "        path = image_paths[i]\n",
+    "        img = np.load(path)\n",
+    "        if expression:\n",
+    "            img = get_updated_image(expression, img)\n",
+    "        np.save(os.path.join(fold_train_dir, os.path.basename(path)), img)\n",
+    "    val_indices = indices[l_idx:r_idx]\n",
+    "    for i in val_indices:\n",
+    "        path = image_paths[i]\n",
+    "        img = np.load(path)\n",
+    "        if expression:\n",
+    "            img = get_updated_image(expression, img)\n",
+    "        np.save(os.path.join(fold_val_dir, os.path.basename(path)), img)\n",
+    "\n",
+    "    for i in train_indices:\n",
+    "        path = mask_paths[i]\n",
+    "        mask = np.load(path)\n",
+    "        np.save(os.path.join(fold_train_ann_dir, os.path.basename(path)), mask)\n",
+    "    \n",
+    "    for i in val_indices:\n",
+    "        path = mask_paths[i]\n",
     "        mask = np.load(path)\n",
     "        np.save(os.path.join(fold_val_ann_dir, os.path.basename(path)), mask)"
    ]
