Update inference notebook

--- a/exp-inference-ensemble.ipynb
+++ b/exp-inference-ensemble.ipynb
@@ -37,6 +37,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "device = \"cuda\" if torch.cuda.is_available() else \"cpu\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "out_mask_dir = \"outputs/out_masks\"\n",
     "full_mask_dir = \"outputs/full_masks\"\n",
     "out_contour_dir = \"outputs/out_contours\"\n",
@@ -48,22 +57,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "model_paths = [\n",
-    "    \"logs/train/fold_0_0501_130849-exp1/best_model.pt\",\n",
-    "    \"logs/train/fold_1_0429_030114-exp1/best_model.pt\",\n",
-    "    \"logs/train/fold_2_0429_013102-exp1/best_model.pt\",\n",
-    "    \"logs/train/fold_3_0430_221854-exp1/best_model.pt\",\n",
-    "    \"logs/train/fold_4_0430_200305-exp1/best_model.pt\"\n",
+    "    \"logs/train/fold_0_0510_041956/best_model.pt\",\n",
+    "    \"logs/train/fold_1_0510_005111/best_model.pt\",\n",
+    "    \"logs/train/fold_2_0509_195356/best_model.pt\",\n",
+    "    \"logs/train/fold_3_0510_105748/best_model.pt\",\n",
+    "    \"logs/train/fold_4_0510_065431/best_model.pt\"\n",
     "]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,12 +86,13 @@
     "        state_dict[k2] = state_dict.pop(k1)\n",
     "\n",
     "    model.load_state_dict(state_dict)\n",
+    "    model.to(device)\n",
     "    models.append(model)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,31 +195,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "inference_dir = \"datasets/inference\"\n",
-    "batch_size = 2\n",
+    "batch_size = 1\n",
     "dataset = InferenceDataset(inference_dir, exp)\n",
     "dataloader = DataLoader(dataset, batch_size, shuffle=False, num_workers=0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "support_imgs_folds = []\n",
     "support_masks_folds = []\n",
-    "for i in range(5):\n",
-    "    img_paths = sorted(glob(os.path.join(\"datasets/Serp/\", str(i), \"train\", \"*.npy\")))\n",
-    "    mask_paths = sorted(glob(os.path.join(\"datasets/Serp/\", str(i), \"annotations\", \"train\", \"*.npy\")))\n",
+    "for i in range(1):\n",
+    "    img_paths = sorted(glob(os.path.join(\"../SerpSeg/data-serp-s\", \"images\", \"*.npy\")))\n",
+    "    mask_paths = sorted(glob(os.path.join(\"../SerpSeg/data-serp-s\", \"masks\", \"*.npy\")))\n",
     "\n",
     "    support_imgs = []\n",
     "    for path in img_paths:\n",
-    "        support_imgs.append(np.load(path).astype(float).transpose(1, 2, 0))\n",
+    "        img = np.load(path).astype(float)\n",
+    "        idx = eval_expression(exp, img)\n",
+    "        max_z = 3\n",
+    "        idx = (idx - idx.mean()) / idx.std()\n",
+    "        idx = (np.clip(idx, -max_z, max_z) + max_z) / (2 * max_z)\n",
+    "        img = np.concatenate([img[:10, :, :], idx[None, :, :]], axis=0)\n",
+    "        support_imgs.append(img.transpose(1, 2, 0))\n",
     "\n",
     "    support_masks = []\n",
     "    for path in mask_paths:\n",
@@ -229,42 +245,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "n_shot = 5\n",
-    "max_shot = 18"
+    "max_shot = 8"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 13/2994 [07:19<27:59:03, 33.80s/it]\n"
-     ]
-    },
-    {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: 'datasets/inference/10_8960_6528.npy'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m/home/dilith/Projects/DCAMA/exp-inference-ensemble.ipynb Cell 12\u001b[0m in \u001b[0;36m<cell line: 3>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/dilith/Projects/DCAMA/exp-inference-ensemble.ipynb#X15sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m pos_count \u001b[39m=\u001b[39m tot_count \u001b[39m=\u001b[39m \u001b[39m0\u001b[39m\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/dilith/Projects/DCAMA/exp-inference-ensemble.ipynb#X15sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m out_dir \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39moutputs/out_masks/\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/home/dilith/Projects/DCAMA/exp-inference-ensemble.ipynb#X15sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39mfor\u001b[39;00m query_img, paths \u001b[39min\u001b[39;00m tqdm(dataloader):\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/dilith/Projects/DCAMA/exp-inference-ensemble.ipynb#X15sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m     indices \u001b[39m=\u001b[39m \u001b[39mlist\u001b[39m(\u001b[39mrange\u001b[39m(max_shot))\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/dilith/Projects/DCAMA/exp-inference-ensemble.ipynb#X15sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m     random\u001b[39m.\u001b[39mshuffle(indices)\n",
-      "File \u001b[0;32m~/anaconda3/envs/ml_env/lib/python3.9/site-packages/tqdm/std.py:1195\u001b[0m, in \u001b[0;36mtqdm.__iter__\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m   1192\u001b[0m time \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_time\n\u001b[1;32m   1194\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[0;32m-> 1195\u001b[0m     \u001b[39mfor\u001b[39;00m obj \u001b[39min\u001b[39;00m iterable:\n\u001b[1;32m   1196\u001b[0m         \u001b[39myield\u001b[39;00m obj\n\u001b[1;32m   1197\u001b[0m         \u001b[39m# Update and possibly print the progressbar.\u001b[39;00m\n\u001b[1;32m   1198\u001b[0m         \u001b[39m# Note: does not call self.update(1) for speed optimisation.\u001b[39;00m\n",
-      "File \u001b[0;32m~/anaconda3/envs/ml_env/lib/python3.9/site-packages/torch/utils/data/dataloader.py:635\u001b[0m, in \u001b[0;36m_BaseDataLoaderIter.__next__\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    632\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_sampler_iter \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[1;32m    633\u001b[0m     \u001b[39m# TODO(https://github.com/pytorch/pytorch/issues/76750)\u001b[39;00m\n\u001b[1;32m    634\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_reset()  \u001b[39m# type: ignore[call-arg]\u001b[39;00m\n\u001b[0;32m--> 635\u001b[0m data \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_next_data()\n\u001b[1;32m    636\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_num_yielded \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n\u001b[1;32m    637\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_dataset_kind \u001b[39m==\u001b[39m _DatasetKind\u001b[39m.\u001b[39mIterable \u001b[39mand\u001b[39;00m \\\n\u001b[1;32m    638\u001b[0m         \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_IterableDataset_len_called \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m \u001b[39mand\u001b[39;00m \\\n\u001b[1;32m    639\u001b[0m         \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_num_yielded \u001b[39m>\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_IterableDataset_len_called:\n",
-      "File \u001b[0;32m~/anaconda3/envs/ml_env/lib/python3.9/site-packages/torch/utils/data/dataloader.py:679\u001b[0m, in \u001b[0;36m_SingleProcessDataLoaderIter._next_data\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    677\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m_next_data\u001b[39m(\u001b[39mself\u001b[39m):\n\u001b[1;32m    678\u001b[0m     index \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_next_index()  \u001b[39m# may raise StopIteration\u001b[39;00m\n\u001b[0;32m--> 679\u001b[0m     data \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_dataset_fetcher\u001b[39m.\u001b[39;49mfetch(index)  \u001b[39m# may raise StopIteration\u001b[39;00m\n\u001b[1;32m    680\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_pin_memory:\n\u001b[1;32m    681\u001b[0m         data \u001b[39m=\u001b[39m _utils\u001b[39m.\u001b[39mpin_memory\u001b[39m.\u001b[39mpin_memory(data, \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_pin_memory_device)\n",
-      "File \u001b[0;32m~/anaconda3/envs/ml_env/lib/python3.9/site-packages/torch/utils/data/_utils/fetch.py:51\u001b[0m, in \u001b[0;36m_MapDatasetFetcher.fetch\u001b[0;34m(self, possibly_batched_index)\u001b[0m\n\u001b[1;32m     49\u001b[0m         data \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdataset\u001b[39m.\u001b[39m__getitems__(possibly_batched_index)\n\u001b[1;32m     50\u001b[0m     \u001b[39melse\u001b[39;00m:\n\u001b[0;32m---> 51\u001b[0m         data \u001b[39m=\u001b[39m [\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdataset[idx] \u001b[39mfor\u001b[39;00m idx \u001b[39min\u001b[39;00m possibly_batched_index]\n\u001b[1;32m     52\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m     53\u001b[0m     data \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdataset[possibly_batched_index]\n",
-      "File \u001b[0;32m~/anaconda3/envs/ml_env/lib/python3.9/site-packages/torch/utils/data/_utils/fetch.py:51\u001b[0m, in \u001b[0;36m<listcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m     49\u001b[0m         data \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdataset\u001b[39m.\u001b[39m__getitems__(possibly_batched_index)\n\u001b[1;32m     50\u001b[0m     \u001b[39melse\u001b[39;00m:\n\u001b[0;32m---> 51\u001b[0m         data \u001b[39m=\u001b[39m [\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mdataset[idx] \u001b[39mfor\u001b[39;00m idx \u001b[39min\u001b[39;00m possibly_batched_index]\n\u001b[1;32m     52\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m     53\u001b[0m     data \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdataset[possibly_batched_index]\n",
-      "\u001b[1;32m/home/dilith/Projects/DCAMA/exp-inference-ensemble.ipynb Cell 12\u001b[0m in \u001b[0;36mInferenceDataset.__getitem__\u001b[0;34m(self, index)\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/dilith/Projects/DCAMA/exp-inference-ensemble.ipynb#X15sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m__getitem__\u001b[39m(\u001b[39mself\u001b[39m, index):\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/dilith/Projects/DCAMA/exp-inference-ensemble.ipynb#X15sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m     path \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mpaths[index]\n\u001b[0;32m---> <a href='vscode-notebook-cell:/home/dilith/Projects/DCAMA/exp-inference-ensemble.ipynb#X15sZmlsZQ%3D%3D?line=11'>12</a>\u001b[0m     img \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39;49mload(path)\u001b[39m.\u001b[39mastype(\u001b[39mfloat\u001b[39m)\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/dilith/Projects/DCAMA/exp-inference-ensemble.ipynb#X15sZmlsZQ%3D%3D?line=12'>13</a>\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mexpression:\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/dilith/Projects/DCAMA/exp-inference-ensemble.ipynb#X15sZmlsZQ%3D%3D?line=13'>14</a>\u001b[0m         idx \u001b[39m=\u001b[39m eval_expression(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mexpression, img)\n",
-      "File \u001b[0;32m~/anaconda3/envs/ml_env/lib/python3.9/site-packages/numpy/lib/npyio.py:405\u001b[0m, in \u001b[0;36mload\u001b[0;34m(file, mmap_mode, allow_pickle, fix_imports, encoding, max_header_size)\u001b[0m\n\u001b[1;32m    403\u001b[0m     own_fid \u001b[39m=\u001b[39m \u001b[39mFalse\u001b[39;00m\n\u001b[1;32m    404\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m--> 405\u001b[0m     fid \u001b[39m=\u001b[39m stack\u001b[39m.\u001b[39menter_context(\u001b[39mopen\u001b[39;49m(os_fspath(file), \u001b[39m\"\u001b[39;49m\u001b[39mrb\u001b[39;49m\u001b[39m\"\u001b[39;49m))\n\u001b[1;32m    406\u001b[0m     own_fid \u001b[39m=\u001b[39m \u001b[39mTrue\u001b[39;00m\n\u001b[1;32m    408\u001b[0m \u001b[39m# Code to distinguish from NumPy binary files and pickles.\u001b[39;00m\n",
-      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'datasets/inference/10_8960_6528.npy'"
+      "100%|██████████| 6551/6551 [1:23:11<00:00,  1.31it/s]\n"
      ]
     }
    ],
@@ -275,34 +273,35 @@
     "    indices = list(range(max_shot))\n",
     "    random.shuffle(indices)\n",
     "    indices = indices[:n_shot]\n",
-    "    mask = np.zeros((256, 256))\n",
+    "    bsz = query_img.shape[0]\n",
+    "    mask = np.zeros((bsz, 256, 256))\n",
     "    for i, model in enumerate(models):\n",
     "        batch = {\n",
-    "            \"query_img\": query_img,\n",
-    "            \"support_imgs\": torch.stack([support_imgs_folds[i][:, indices]] * batch_size).squeeze().float(),\n",
-    "            \"support_masks\": torch.stack([support_masks_folds[i][:, indices]] * batch_size).squeeze().float(),\n",
+    "            \"query_img\": query_img.to(device),\n",
+    "            \"support_imgs\": torch.stack([support_imgs_folds[0][:, indices].squeeze()] * batch_size).float().to(device),\n",
+    "            \"support_masks\": torch.stack([support_masks_folds[0][:, indices].squeeze()] * batch_size).float().to(device),\n",
     "            \"org_query_imsize\": [torch.tensor([256]), torch.tensor([256]), torch.tensor([11])]\n",
     "        }\n",
-    "        new_mask = model.predict_mask_nshot(batch, nshot=n_shot).squeeze().cpu().numpy()\n",
-    "    mask = mask > 2\n",
+    "        mask += model.predict_mask_nshot(batch, nshot=n_shot).cpu().numpy()\n",
+    "    mask = mask > 3\n",
     "    pos_count += mask.sum().item()\n",
-    "    tot_count += mask.shape[0] ** 2\n",
+    "    tot_count += mask.shape[1] ** 2\n",
     "    for j, path in enumerate(paths):\n",
     "        np.save(os.path.join(out_dir, os.path.basename(path)), mask[j])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.0124908447265625"
+       "0.04775421464011935"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -313,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -325,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -351,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -361,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -371,17 +370,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "421 421\n",
-      "611 611\n",
-      "782 782\n",
-      "2522 2522\n"
+      "279 279\n",
+      "3169 3169\n",
+      "3146 3146\n",
+      "1133 1133\n",
+      "3174 3174\n",
+      "940 940\n"
      ]
     }
    ],
